--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,15 +2,13 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-commons-math3 = "3.6.1"
-guava = "33.0.0-jre"
 junit-jupiter = "5.10.2"
 hibernate-orm-core = "6.5.2.Final"
 mongodb-java-driver = "3.12.14"
+embedded-mongodb = "4.15.0"
 
 [libraries]
-commons-math3 = { module = "org.apache.commons:commons-math3", version.ref = "commons-math3" }
-guava = { module = "com.google.guava:guava", version.ref = "guava" }
 hibernate-core = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibernate-orm-core" }
 mongodb-java-driver = { module = "org.mongodb:mongo-java-driver", version.ref = "mongodb-java-driver" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
+embedded-mongodb = { module = "de.flapdoodle.embed:de.flapdoodle.embed.mongo", version.ref = "embedded-mongodb" }
