--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    implementation libs.hibernate.core, libs.mongodb.java.driver, libs.parboiled.java
+    implementation libs.hibernate.core, libs.mongodb.java.driver
 }
 
 java {
