--- a/lib/src/main/resources/hibernate.properties
+++ b/lib/src/main/resources/hibernate.properties
@@ -1,2 +1,4 @@
 hibernate.dialect=MongodbDialect
 hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongodbConnectionProvider
+mongodb.connection.url=mongodb+srv://nathanqingyangxu:I0Oj6kwaf3r1ZuRh@cluster0.gfxzieb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+mongodb.database.name=sample_mflix
