--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,13 +4,13 @@
 [versions]
 junit-jupiter = "5.10.2"
 hibernate-orm-core = "6.5.2.Final"
-hibernate-orm-testing = "6.5.2.Final"
 mongodb-java-driver = "5.1.2"
-embedded-mongodb = "4.15.0"
+testcontainers-mongodb = "1.20.0"
+logback-classic = "1.5.6"
 
 [libraries]
 hibernate-orm-core = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibernate-orm-core" }
-hibernate-orm-testing = { module = "org.hibernate.orm:hibernate-testing", version.ref = "hibernate-orm-testing" }
 mongodb-java-driver = { module = "org.mongodb:mongodb-driver-sync", version.ref = "mongodb-java-driver" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
-embedded-mongodb = { module = "de.flapdoodle.embed:de.flapdoodle.embed.mongo", version.ref = "embedded-mongodb" }
+testcontainers-mongodb = { module = "org.testcontainers:mongodb", version.ref = "testcontainers-mongodb" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
