--- a/chameleon/src/test/resources/hibernate.properties
+++ b/chameleon/src/test/resources/hibernate.properties
@@ -1,4 +1,5 @@
 hibernate.dialect=org.hibernate.omm.dialect.MongodbDialect
 hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongodbConnectionProvider
+hibernate.current_session_context_class=thread
 mongodb.connection.url={your_mongodb_connection_url}
 mongodb.database={your_mongodb_database}
