fix error in hibernate.properties; rename method name in MongoJsonAstTranslator to align with the convention

--- a/chameleon/src/test/resources/hibernate.properties
+++ b/chameleon/src/test/resources/hibernate.properties
@@ -1,5 +1,5 @@
-hibernate.dialect=org.hibernate.omm.dialect.MongodbDialect
-hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongodbConnectionProvider
+hibernate.dialect=org.hibernate.omm.dialect.MongoDialect
+hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongoConnectionProvider
 hibernate.current_session_context_class=thread
 
 ## uncomment the following two lines to connect with external MongoDB (e.g. MongoDB Atlas)
