--- a/chameleon/build.gradle
+++ b/chameleon/build.gradle
@@ -19,7 +19,8 @@ dependencies {
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    implementation libs.hibernate.orm.core, libs.mongodb.java.driver
+    api libs.hibernate.orm.core
+    implementation libs.mongodb.java.driver
 }
 
 java {
