--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ mongodb-java-driver = "5.1.2"
 testcontainers-mongodb = "1.20.0"
 logback-classic = "1.5.6"
 assertj = "3.26.3"
+slf4j-api = "2.0.13"
 
 [libraries]
 hibernate-orm-core = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibernate-orm-core" }
@@ -16,3 +17,4 @@ junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "jun
 testcontainers-mongodb = { module = "org.testcontainers:mongodb", version.ref = "testcontainers-mongodb" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
 assertj = { module = "org.assertj:assertj-core", version.ref = "assertj" }
+sl4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j-api" }
