--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ testcontainers-mongodb = "1.20.0"
 logback-classic = "1.5.6"
 assertj = "3.26.3"
 slf4j-api = "2.0.13"
+spotbugs-annotations = "4.8.6"
 
 [libraries]
 hibernate-orm-core = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibernate-orm-core" }
@@ -18,3 +19,4 @@ testcontainers-mongodb = { module = "org.testcontainers:mongodb", version.ref = 
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
 assertj = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 sl4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j-api" }
+spotbugs-annotations = { module = "com.github.spotbugs:spotbugs-annotations", version.ref = "spotbugs-annotations" }
