configure to skip Checker framework usage by default

--- a/chameleon/build.gradle
+++ b/chameleon/build.gradle
@@ -35,7 +35,7 @@ tasks.named('test') {
 }
 
 checkerFramework {
-    skipCheckerFramework = false // set 'true' to skip it!
+    skipCheckerFramework = true // set 'true' to skip it!
     excludeTests = true
     checkers = [
             'org.checkerframework.checker.nullness.NullnessChecker'
