--- a/chameleon/build.gradle
+++ b/chameleon/build.gradle
@@ -40,4 +40,8 @@ checkerFramework {
     checkers = [
             'org.checkerframework.checker.nullness.NullnessChecker'
     ]
+    extraJavacArgs = [
+            '-AskipUses=^org\\.hibernate\\.omm\\.ast\\.AbstractMongoSqlAstTranslator$',
+            "-Astubs=$projectDir/src/main/resources/stubs/hibernate-orm.astub"
+    ]
 }
