--- a/chameleon/build.gradle
+++ b/chameleon/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     api libs.hibernate.orm.core
-    implementation libs.mongodb.java.driver, libs.sl4j.api, libs.spotbugs.annotations
+    implementation libs.mongodb.sync.java.driver, libs.sl4j.api, libs.spotbugs.annotations
 }
 
 java {
