--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@
 [versions]
 junit-jupiter = "5.10.2"
 hibernate-orm-core = "6.6.0.Final"
-mongodb-java-driver = "5.1.2"
+mongodb-sync-java-driver = "5.1.3"
 testcontainers-mongodb = "1.20.0"
 logback-classic = "1.5.6"
 assertj = "3.26.3"
@@ -13,7 +13,7 @@ spotbugs-annotations = "4.8.6"
 
 [libraries]
 hibernate-orm-core = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibernate-orm-core" }
-mongodb-java-driver = { module = "org.mongodb:mongodb-driver-sync", version.ref = "mongodb-java-driver" }
+mongodb-sync-java-driver = { module = "org.mongodb:mongodb-driver-sync", version.ref = "mongodb-sync-java-driver" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
 testcontainers-mongodb = { module = "org.testcontainers:mongodb", version.ref = "testcontainers-mongodb" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
