--- a/chameleon/build.gradle
+++ b/chameleon/build.gradle
@@ -6,9 +6,9 @@
  */
 
 plugins {
-    id 'java-library'
+    id 'java-library' // we are developing library
     id 'checkstyle'
-    id 'org.checkerframework' version '0.6.42'
+    alias libs.plugins.checker.framework
 }
 
 repositories {
@@ -36,6 +36,7 @@ tasks.named('test') {
 }
 
 checkstyle {
+    toolVersion = "9.3"
     checkstyleTest.enabled = false
 }
 
@@ -46,7 +47,7 @@ checkerFramework {
             'org.checkerframework.checker.nullness.NullnessChecker'
     ]
     extraJavacArgs = [
-            '-AskipUses=^org\\.hibernate\\.omm\\.ast\\.AbstractMongoSqlAstTranslator$',
+            '-AskipUses=^org\\.hibernate\\.omm\\.ast\\.AbstractMongoSqlAstTranslator$', //skipped for it comes from Hibernate
             "-Astubs=$projectDir/src/main/resources/stubs"
     ]
 }
