--- a/chameleon-core/src/test/resources/hibernate.properties
+++ b/chameleon-core/src/test/resources/hibernate.properties
@@ -1,3 +1,4 @@
 hibernate.dialect=org.hibernate.omm.dialect.MongoDialect
 hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongoConnectionProvider
+hibernate.dialect.native_param_markers=true
 hibernate.current_session_context_class=thread
