--- a/chameleon-core/src/main/resources/hibernate.properties
+++ b/chameleon-core/src/main/resources/hibernate.properties
@@ -2,3 +2,4 @@ hibernate.dialect=org.hibernate.omm.dialect.MongoDialect
 hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongoConnectionProvider
 hibernate.dialect.native_param_markers=true
 hibernate.current_session_context_class=thread
+hibernate.type.preferred_uuid_jdbc_type=CHAR
