--- a/chameleon-core/build.gradle
+++ b/chameleon-core/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     api libs.hibernate.orm.core
     implementation libs.mongodb.sync.java.driver, libs.sl4j.api, libs.spotbugs.annotations
 
+    annotationProcessor project(':chameleon-annotation-processor')
+    implementation project(':chameleon-annotation-processor')
 }
 
 java {
