--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ rootProject.name = 'jpa-mongodb-mapping'
 
 include 'chameleon-core'
 include 'chameleon-testing'
+include 'chameleon-annotation-processor'
 
