--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ slf4j-api = "2.0.13"
 spotbugs-annotations = "4.8.6"
 checker-framework = "0.6.42"
 google-auto-service = "1.1.1"
+aspectj = "1.9.22.1"
+freefair-aspectj-weaving = "8.10"
 
 [libraries]
 hibernate-orm-core = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibernate-orm-core" }
@@ -23,6 +25,8 @@ assertj = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 sl4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j-api" }
 spotbugs-annotations = { module = "com.github.spotbugs:spotbugs-annotations", version.ref = "spotbugs-annotations" }
 google-auto-service = { module = "com.google.auto.service:auto-service", version.ref = "google-auto-service" }
+aspectj-rt = { module = "org.aspectj:aspectjrt", version.ref = "aspectj" }
 
 [plugins]
 checker-framework = { id = "org.checkerframework", version.ref = "checker-framework" }
+freefair-aspectj-weaving = { id = "io.freefair.aspectj.post-compile-weaving", version.ref = "freefair-aspectj-weaving" }
