minor improvements: 1)transaction commit and rollback; 2)use recommended exporting JPA property for indexing testing case; 3) add jpamodelgen dependency for future Criteria testing usage.

--- a/chameleon-core/build.gradle
+++ b/chameleon-core/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 
     //implementation project(':hibernate-overlay')
     implementation libs.hibernate.orm.core
+
+    // JPA Metamodel Generator (used in JPA Criteria)
+    annotationProcessor libs.hibernate.jpamodelgen
 }
 
 java {
