switch to similar testing approach in Mongo Java Driver (local running mongod process way)

--- a/chameleon-core/src/test/resources/hibernate.properties
+++ b/chameleon-core/src/test/resources/hibernate.properties
@@ -15,6 +15,7 @@
 #  limitations under the License.
 #
 #
+#jakarta.persistence.jdbc.url={YOUR_MONGO_CONNECTION_STRING} // default to 'mongodb://localhost/test'
 jakarta.persistence.jdbc.driver=org.hibernate.omm.jdbc.MongoDriver
 hibernate.dialect=org.hibernate.omm.dialect.MongoDialect
 hibernate.dialect.native_param_markers=true
