switch to dialect resolver mechanism for better flexibility

--- a/chameleon-core/src/test/resources/hibernate.properties
+++ b/chameleon-core/src/test/resources/hibernate.properties
@@ -15,9 +15,8 @@
 #  limitations under the License.
 #
 #
-#jakarta.persistence.jdbc.url={YOUR_MONGO_CONNECTION_STRING} // default to 'mongodb://localhost/test'
 jakarta.persistence.jdbc.driver=org.hibernate.omm.jdbc.MongoDriver
-hibernate.dialect=org.hibernate.omm.dialect.MongoDialect
+hibernate.dialect_resolvers=org.hibernate.omm.dialect.MongoDialectResolver
 hibernate.dialect.native_param_markers=true
 hibernate.current_session_context_class=thread
 hibernate.type.preferred_uuid_jdbc_type=CHAR
