--- a/chameleon-core/src/test/resources/hibernate.properties
+++ b/chameleon-core/src/test/resources/hibernate.properties
@@ -15,9 +15,8 @@
 #  limitations under the License.
 #
 #
-jakarta.persistence.jdbc.driver=org.hibernate.omm.jdbc.MongoDriver
+hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongoConnectionProvider
 hibernate.dialect_resolvers=org.hibernate.omm.dialect.MongoDialectResolver
 hibernate.dialect.native_param_markers=true
 hibernate.current_session_context_class=thread
 hibernate.type.preferred_uuid_jdbc_type=CHAR
-hibernate.connection.autocommit=true
