change default testing mongodb from 'test' to 'chameleon-test'

--- a/chameleon-core/src/test/resources/hibernate.properties
+++ b/chameleon-core/src/test/resources/hibernate.properties
@@ -15,6 +15,7 @@
 #  limitations under the License.
 #
 #
+#jakarta.persistence.jdbc.url=mongodb://localhost/chameleon-test
 hibernate.connection.provider_class=org.hibernate.omm.jdbc.MongoConnectionProvider
 hibernate.dialect_resolvers=org.hibernate.omm.dialect.MongoDialectResolver
 hibernate.dialect.native_param_markers=true
