--- a/chameleon-core/build.gradle
+++ b/chameleon-core/build.gradle
@@ -8,6 +8,7 @@
 plugins {
     id 'java-library'
     alias libs.plugins.checker.framework
+    id 'info.solidsoft.pitest' version '1.15.0'
 }
 
 repositories {
@@ -54,3 +55,11 @@ checkerFramework {
             "-Astubs=$projectDir/src/main/resources/stubs"
     ]
 }
+
+pitest {
+    //adds dependency to org.pitest:pitest-junit5-plugin and sets "testPlugin" to "junit5"
+    junit5PluginVersion = '1.0.0'    //or 0.15 for PIT <1.9.0
+    verbose = true
+    targetClasses = ['org.hibernate.omm.*']
+}
+
